--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "psyprog"
+  title: "RPsyche"
   navbar:
     left:
       - href: slides/overview.qmd
